--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ body {
   }
   
   input {
-    width: -webkit-fill-available;
+    width: 97%;
     padding: 5px;
     border: 2px solid #000;
   }
